@@ -1,4 +1,4 @@
-.TH LESS 1 "Version 408: 01 Oct 2007"
+.TH LESS 1 "Version 409: 12 Oct 2007"
 .SH NAME
 less \- opposite of more
 .SH SYNOPSIS
